[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/GUI/PlayerHud.gd" type="Script" id=1]
[ext_resource path="res://assets/Player/HUD/Life1.png" type="Texture" id=2]
[ext_resource path="res://assets/Player/HUD/Life2.png" type="Texture" id=3]
[ext_resource path="res://assets/Player/HUD/Time2.png" type="Texture" id=4]
[ext_resource path="res://assets/Player/HUD/Time1.png" type="Texture" id=5]
[ext_resource path="res://assets/Fonts/FifteenNarrow.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_color = Color( 1, 0.941176, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -70.0
color = Color( 0, 0, 0, 0.392157 )

[node name="LifeBars" type="MarginContainer" parent="Background"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -68.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="LifeNTime" type="HBoxContainer" parent="Background/LifeBars"]
margin_left = 10.0
margin_top = 10.0
margin_right = 530.0
margin_bottom = 58.0
custom_constants/separation = 20
alignment = 1

[node name="Life" type="TextureProgress" parent="Background/LifeBars/LifeNTime"]
margin_left = 58.0
margin_right = 250.0
margin_bottom = 48.0
max_value = 3.0
value = 2.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )

[node name="Time" type="TextureProgress" parent="Background/LifeBars/LifeNTime"]
margin_left = 270.0
margin_right = 462.0
margin_bottom = 48.0
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
fill_mode = 1

[node name="Background2" type="ColorRect" parent="."]
anchor_right = 1.0
margin_bottom = 100.0
color = Color( 0, 0, 0, 0.392157 )

[node name="Status" type="MarginContainer" parent="Background2"]
anchor_right = 1.0
margin_bottom = 100.0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="PointsNName" type="VBoxContainer" parent="Background2/Status"]
margin_top = 10.0
margin_right = 540.0
margin_bottom = 90.0
custom_constants/separation = 10
alignment = 1

[node name="Name" type="Label" parent="Background2/Status/PointsNName"]
margin_right = 540.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.992157, 0.541176, 1 )
text = "Name"
align = 1

[node name="Points" type="Label" parent="Background2/Status/PointsNName"]
margin_top = 52.0
margin_right = 540.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 2 )
text = "SC$"
align = 1
